End photos uploading implementation

--- a/src/views/photos/index.hbs
+++ b/src/views/photos/index.hbs
@@ -9,7 +9,7 @@
     <h1>Nest app | Photos</h1>
     {{#each photos}}
     <div>
-      <img src="{{humbPath}}"
+      <img src="{{thumbPath}}"
       <br>
       <a href="{{downloadPath}}">Download</a>
     </div>
